<resources>
    <string name="app_name">TrackingGoogleApi</string>
    <string name="start_location_updates">Start Location Updates</string>
    <string name="stop_location_updates">Stop Location Updates</string>
    <string name="longitudevalue">LongitudeValue</string>
    <string name="longitude">Longitude:</string>
    <string name="latitudevalue">LatitudeValue</string>
    <string name="latitude">Latitude:</string>
</resources>