<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonStartLocationUpdates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_location_updates" />

    <Button
        android:id="@+id/buttonStopLocationUpdates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_location_updates"/>

    <TextView
        android:id="@+id/textViewLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"/>

    <TextView
        android:id="@+id/textViewLatValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitudevalue"/>

    <TextView
        android:id="@+id/textViewLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"/>

    <TextView
        android:id="@+id/textViewLonValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitudevalue"/>
</LinearLayout>